检查项目是否达标

--- a/LabManagementSystemBackend/src/main/resources/application.properties
+++ b/LabManagementSystemBackend/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jackson.time-zone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+app.security.jwt.secret=lab-management-system-secret-key-please-change-32bytes
+app.security.jwt.issuer=lab-management-system
+app.security.jwt.ttl-seconds=3600
